--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
+    <title>{{ title }}</title>
 </head>
 
 <body>
@@ -18,17 +18,14 @@
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li><a href="#" class="nav-link px-2">Home</a></li>
                     </ul>
-
-                    <div class="text-end">
-                        <div class="d-flex align-items-center justify-content-center">
-                            {% if current_user.is_authenticated %}
-                            <p class="text-center">Hi, {{ current_user.username }}!</p>
-                            <a class="btn btn-warning" href="{{ url_for('logout') }}">Logout</a>
-                            {% else %}
-                            <a class="btn btn-outline-light me-2" href="{{ url_for('login') }}">Login</a>
-                            <a class="btn btn-warning" href="{{ url_for('register') }}">Sign-up</a>
-                            {% endif %}
-                        </div>
+                    <div class="d-flex flex-row align-items-center justify-content-center">
+                        {% if current_user.is_authenticated %}
+                        <p class="my-0 mx-3">Hi, {{ current_user.username }}!</p>
+                        <a class="btn btn-warning" href="{{ url_for('logout') }}">Logout</a>
+                        {% else %}
+                        <a class="btn btn-outline-light me-2" href="{{ url_for('login') }}">Login</a>
+                        <a class="btn btn-warning" href="{{ url_for('register') }}">Sign-up</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
