--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -6,16 +6,7 @@
     <main class="form-signin">
         <form method="post" action="{{ url_for('login') }}">
             <h1 class="h3 mb-3 fw-normal">Login</h1>
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }}" role="alert">
-                {{ message }}
-            </div>
-            {% endfor %}
-            </ul>
-            {% endif %}
-            {% endwith %}
+            {% include "./utils/messages.html" %}
             <div class="form-floating">
                 <input type="text" class="form-control mb-3" id="floatingInput" placeholder="Username" name="username">
                 <label for="floatingInput">Username</label>
