--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -5,16 +5,7 @@
     <main class="form-signin">
         <form method="post" action="{{ url_for('register') }}">
             <h1 class="h3 mb-3 fw-normal">Register</h1>
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }}" role="alert">
-                {{ message }}
-            </div>
-            {% endfor %}
-            </ul>
-            {% endif %}
-            {% endwith %}
+            {% include "./utils/messages.html" %}
             <div class="form-floating">
                 <input type="text" class="form-control mb-3" id="floatingInput" placeholder="Username" name="username">
                 <label for="floatingInput">Username</label>
@@ -27,7 +18,7 @@
             <div class="form-floating">
                 <input type="password" class="form-control mb-3" id="floatingPassword" placeholder="Confirm password"
                     name="confirm">
-                <label for="floatingPassword">Password</label>
+                <label for="floatingPassword">Confirm password</label>
             </div>
 
             <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
