Add link parser Add PROJECT_DIR and BASE_DIR to config file, add FILES_DIR and LINKS_FILE to Config class Modify User model __repr__ method Beautify templates Add utils.py module with functions to Sites XML report, create fake User, Site Add utils.create_file_if_not_exists decorator Add link parser module Add routes to parse links and download XML report Minor Dockerfile, Makefile and entrypoint.sh changes Update requirements file

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -16,7 +16,8 @@
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                        <li><a href="#" class="nav-link px-2">Home</a></li>
+                        <li><a href="{{ url_for('index') }}" class="nav-link px-2">Home</a></li>
+                        <li><a href="{{ url_for('parse_links') }}" class="nav-link px-2">Parse links</a></li>
                     </ul>
                     <div class="d-flex flex-row align-items-center justify-content-center">
                         {% if current_user.is_authenticated %}
