--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,8 +3,11 @@
 
 {% block content %}
 <div class="col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+  <div class="mb-0 mt-3 text-center d-flex justify-content-center align-items-center">
+    {% include "utils/messages.html" %}
+  </div>
   {% if sites %}
-  <a href="{{ url_for('download') }}" class="btn btn-success text-end my-3">Download file</a>
+  <a href="{{ url_for('download') }}" class="btn btn-success text-end my-3">Download XML Report</a>
   <div class="my-3 table-responsive">
 
     <table class="table table-hover align-middle">
