Modify parse route for commiting multiple instances Modify parse route with query merge_result method for bulk upsert support Change Site.title type from SQLAlchemy.String to SQLAlchemy.Text Remove Site table UniqueConstraint Change parser.create_site_list function to generator Minor parser improvements Refactor utils.create_fake_site function Change docker-compose db service 'environment' to 'env_file' Refactor Dockerfile Add  afew docker commands to Makefile Modify templates

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -15,10 +15,14 @@
         <header class="p-3 bg-dark text-white">
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                    {% if current_user.is_authenticated %}
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li><a href="{{ url_for('index') }}" class="nav-link px-2">Home</a></li>
+                        <li><a href="{{ url_for('links_user_specific', user_name=user.username) }}"
+                                class="nav-link px-2">{{ user.username }} sites</a></li>
                         <li><a href="{{ url_for('parse_links') }}" class="nav-link px-2">Parse links</a></li>
                     </ul>
+                    {% endif %}
                     <div class="d-flex flex-row align-items-center justify-content-center">
                         {% if current_user.is_authenticated %}
                         <p class="my-0 mx-3">Hi, {{ current_user.username }}!</p>
