Add insert or update functionality for parse_links route Add pytest_cache to gitignore Fix aiohttp request settings, add ssl_context with ssl and certifi packages Add User last_login field update on logout Minor templates fixes

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -27,7 +27,7 @@
           <td><a href="{{ site.url }}" target="_blank">{{ site.title }}</a></td>
           <td class="text-center text-nowrap">{{ site.user.username }}</td>
           <td class="text-center text-nowrap">{{ site.scrapping_time }}</td>
-          <td class="text-center text-nowrap">{{ site.created_at.strftime("%B %d %Y") }}</td>
+          <td class="text-center text-nowrap">{{ site.created_at.strftime("%B %d, %Y") }}</td>
         </tr>
         {% endfor %}
       </tbody>
