--- a/project/templates/links_list.html
+++ b/project/templates/links_list.html
@@ -27,7 +27,7 @@
           <td><a href="{{ site.url }}" target="_blank">{{ site.title }}</a></td>
           <td class="text-center text-nowrap">{{ site.user.username }}</td>
           <td class="text-center text-nowrap">{{ site.scrapping_time }}</td>
-          <td class="text-center text-nowrap">{{ site.created_at.strftime("%B %d %Y") }}</td>
+          <td class="text-center text-nowrap">{{ site.created_at.strftime("%B %d, %Y") }}</td>
         </tr>
         {% endfor %}
       </tbody>
