--- a/project/templates/files.html
+++ b/project/templates/files.html
@@ -18,15 +18,17 @@
             {% for file in files %}
             <tr>
                 <th scope="row" class="text-center">{{ file.name }}</th>
-                <td class="text-center"><a href="{{ url_for('parse_links', file_name=file.name) }}">Parse file</a></td>
+                <td class="text-center">
+                    <a href="{{ url_for('parse_links', file_name=file.name) }}" class="btn btn-primary px-1">Parse</a>
+                    <a href="{{ url_for('delete_file', file_name=file.name) }}" class="btn btn-danger px-1">Delete</a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
 
     </table>
-</div>
-{% else %}
-<h4 class="mt-3 text-center">You haven't uploaded any files yet</h4>
-{% endif %}
+    {% else %}
+    <h4 class="mt-3 text-center">You haven't uploaded any files yet</h4>
+    {% endif %}
 </div>
 {% endblock content %}
