--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,37 +3,12 @@
 
 {% block content %}
 <div class="col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-  <div class="mb-0 mt-3 text-center d-flex justify-content-center align-items-center">
+  <div class="mb-0 mt-3 text-center d-flex justify-content-center align-items-center flex-column">
     {% include "utils/messages.html" %}
   </div>
   {% if sites %}
   <a href="{{ url_for('download') }}" class="btn btn-success text-end my-3">Download XML Report</a>
-  <div class="my-3 table-responsive">
-
-    <table class="table table-hover align-middle table-responsive">
-      <thead class="align-middle text-center text-nowrap">
-        <tr>
-          <th scope="col">ID</th>
-          <th scope="col">Title</th>
-          <th scope="col">User</th>
-          <th scope="col">Time to fetch</th>
-          <th scope="col">Date</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for site in sites %}
-        <tr>
-          <th scope="row" class="text-center">{{ site.id }}</th>
-          <td><a href="{{ site.url }}" target="_blank">{{ site.title }}</a></td>
-          <td class="text-center text-nowrap">{{ site.user.username }}</td>
-          <td class="text-center text-nowrap">{{ site.scrapping_time }}</td>
-          <td class="text-center text-nowrap">{{ site.created_at.strftime("%B %d, %Y") }}</td>
-        </tr>
-        {% endfor %}
-      </tbody>
-
-    </table>
-  </div>
+  {% include "utils/statistics_table.html" %}
   {% else %}
   <h4 class="mt-3 text-center">No sites in database yet(</h4>
   {% endif %}
