--- a/project/templates/links_list.html
+++ b/project/templates/links_list.html
@@ -10,7 +10,7 @@
   <a href="{{ url_for('download') }}" class="btn btn-success text-end my-3">Download XML Report</a>
   {% include "utils/statistics_table.html" %}
   {% else %}
-  <h4 class="mt-3 text-center">You haven't parsed any sites yet(</h4>
+  <h4 class="mt-3 text-center">You haven't parsed any sites yet</h4>
   {% endif %}
 </div>
 {% endblock content %}
