--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -20,7 +20,7 @@
                         <li><a href="{{ url_for('index') }}" class="nav-link px-2">Home</a></li>
                         <li><a href="{{ url_for('links_user_specific', user_name=current_user.username) }}"
                                 class="nav-link px-2">Parsed by me</a></li>
-                        <li><a href="{{ url_for('upload_file') }}" class="nav-link px-2">Upload file</a></li>
+                        <li><a href="{{ url_for('upload_file_view') }}" class="nav-link px-2">Upload file</a></li>
                         <li><a href="{{ url_for('list_user_files') }}" class="nav-link px-2">Files</a></li>
                     </ul>
                     {% endif %}
@@ -29,8 +29,8 @@
                         <p class="my-0 mx-3">Hi, {{ current_user.username }}!</p>
                         <a class="btn btn-warning" href="{{ url_for('logout') }}">Logout</a>
                         {% else %}
-                        <a class="btn btn-outline-light me-2" href="{{ url_for('login') }}">Login</a>
-                        <a class="btn btn-warning" href="{{ url_for('register') }}">Sign-up</a>
+                        <a class="btn btn-outline-light me-2" href="{{ url_for('login_view') }}">Login</a>
+                        <a class="btn btn-warning" href="{{ url_for('register_view') }}">Sign-up</a>
                         {% endif %}
                     </div>
                 </div>
