--- a/project/templates/files.html
+++ b/project/templates/files.html
@@ -19,8 +19,8 @@
             <tr>
                 <th scope="row" class="text-center">{{ file.name }}</th>
                 <td class="text-center">
-                    <a href="{{ url_for('parse_links', file_name=file.name) }}" class="btn btn-primary px-1">Parse</a>
-                    <a href="{{ url_for('delete_file', file_name=file.name) }}" class="btn btn-danger px-1">Delete</a>
+                    <a href="{{ url_for('main_app.parse_links', file_name=file.name) }}" class="btn btn-primary px-1">Parse</a>
+                    <a href="{{ url_for('main_app.delete_file', file_name=file.name) }}" class="btn btn-danger px-1">Delete</a>
                 </td>
             </tr>
             {% endfor %}
