--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="text-center mt-3 d-flex justify-content-center">
     <main class="form-signin">
-        <form method="post" action="{{ url_for('register') }}">
+        <form method="post" action="{{ url_for('main_app.register') }}">
             {{ form.csrf_token }}
             <h1 class="h3 mb-3 fw-normal">Register</h1>
             {% include "./utils/messages.html" %}
