--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="text-center mt-3 d-flex justify-content-center">
     <main class="form-signin">
-        <form method="post" action="{{ url_for('login') }}">
+        <form method="post" action="{{ url_for('main_app.login') }}">
             {{ form.csrf_token }}
             <h1 class="h3 mb-3 fw-normal">Login</h1>
             {% include "./utils/messages.html" %}
